--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,12 +13,12 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [master, develop]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
+    branches: [master]
   schedule:
-    - cron: '22 0 * * 6'
+  - cron: '22 0 * * 6'
 
 jobs:
   analyze:
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'csharp', 'javascript' ]
+        language: ['csharp', 'javascript']
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
@@ -40,6 +40,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - uses: clonedSemicolon/setup-strace@v13
     - name: Setup Dotnet Environment
       uses: actions/setup-dotnet@v3
       with:
@@ -53,9 +54,14 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-    
+
     - name: Compile the Code
-      run: dotnet build Damselfly.sln -c Release 
-    
+      run: dotnet build Damselfly.sln -c Release
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
